asm/demo-manifests/frontend-custom-100-0.yml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthos-service-mesh_bank-of-anthos_virtualservice_frontend ]
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: /frontend
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - bank-of-anthos-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            subset: v0-2-0
          weight: 0
        - destination:
            host: frontend
            subset: v0-2-0-custom
          weight: 100
          # [END anthos-service-mesh_bank-of-anthos_virtualservice_frontend ]
